kubernetes/nuxt-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: imdb-demo
  annotations:
    reloader.stakater.com/auto: "true"
  name: imdb-demo
  namespace: tkpc
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 30
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: imdb-demo
    spec:
      containers:
      - args:
        - npm
        - run
        - start
        image: sportfloodteam/imdb-watchlist
        imagePullPolicy: Always
        name: website
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "100m"
          requests:
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 20
          failureThreshold: 5
      restartPolicy: Always
status: {}
