kubernetes/nuxt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imdb-demo
  name: website-service
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: imdb-demo
