kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tkpc-ingress
  namespace: tkpc
  annotations:
    kubernetes.io/ingress.class: kong
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - demo.tkpc.no
      secretName: letsencrypt-prod
  rules:
    - host: demo.tkpc.no
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
